--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="main">
+  <div class="main">    <div></div>
     <p id="title">Money</p>
     <img id="pfp" src="black.png">
     <div class="money">
