--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="open">c</div>
   <div class="main">    <div></div>
     <p id="title">Money</p>
     <img id="pfp" src="black.png">
